--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -328,7 +328,9 @@ estimate_relation(m_v) |>
 ```{r}
 
 df <- df |>
-  filter(SexualOrientation == "Heterosexual")
+  filter(SexualOrientation == "Heterosexual") 
+
+df$SexualOrientation <- droplevels(df$SexualOrientation)
 
 ```
 
@@ -337,8 +339,7 @@ Due to the low number of participants self-described as Bisexual (N= `r sum(dfsu
 Exploratory analysis will then evaluate the effect of sexual orientation on ratings.
 
 ## Arousal
-
-Similar to [study1](https://realitybending.github.io/FictionEro/study1/analysis/2_emotions.html) arousal ratings for some "AI-generated" are lower then when they are presented as real photos.
+<!-- Similar to [study1](https://realitybending.github.io/FictionEro/study1/analysis/2_emotions.html) arousal ratings for some "AI-generated" are lower then when they are presented as real photos. -->
 
 ```{r Arousal Desc}
 #| fig-height: 12
@@ -416,20 +417,13 @@ arousal_desc <- df |>
 arousal_desc
 ```
 
-### Whole Sample
+### Sample
 
-This model examines the effect of **Gender Sexual Orientation, stimuli type, and Condition on Arousal**, accounting for random variability due to participants and items (i.e., random intercepts) and condition as random slope for participants.
+This model examines the effect of **Gender Sexual Orientation and Condition on Arousal**, accounting for random variability due to participants and items (i.e., random intercepts) and condition as random slope for participants.
 
 <!-- The intercept is Male, photograph, individuals  -->
 
-Women rate photograph of individuals lower than males. Men show less arousal toward couple images (vs individual ones), regardless of condition. Women show greater arousal toward couple images than individual ones. Men show less arousal for AI-generated individual images compared to photographic individual images.
-
-Looking at average slopes:
-
-1.  Males rate AI-generated images \~0.014 lower in arousal (on average) than photos — significant.
-2.  Females also rate AI images lower, but not significantly.
-3.  Males rate couple images significantly lower in arousal than individual ones.
-4.  Females rate couple images significantly higher in arousal than individual ones.
+Men rate images labelled as AI-generated as less arousing than images labelled as real.  Women also rate AI-generated images lower in arousal but not significantly. 
 
 ```{r Arousal}
 
@@ -442,6 +436,12 @@ results_table(m_arousal)
 marginaleffects::avg_slopes(m_arousal, variables="Condition", by="Gender") |>
   results_table()
 ```
+
+#### Sample with Stimili Type
+
+This model examines the effect of **Gender Sexual Orientation, stimuli type, and Condition on Arousal**, accounting for random variability due to participants and items (i.e., random intercepts) and condition as random slope for participants.
+
+Women rate photograph of individuals lower than males. Men show less arousal toward couple images (vs individual ones), regardless of condition. Women show greater arousal toward couple images than individual ones. Men show less arousal for AI-generated individual and couple images compared to photographic images.
 
 ```{r Arousal with Stimuli Type}
 
@@ -457,24 +457,15 @@ marginaleffects::avg_slopes(m_arousal_st, variables=c("Condition", "StimuliType"
 
 ### Moderators
 
+#### Questionnaires
+
 This model explores whether various factors such as **attitudes towards AI, knowledge about AI, frequency of porn consumption, and sexual activity** moderate the relationship between gender, image relevance (specifically AI-generated versus photographs), and arousal ratings.
 
-The analysis revealed a significant interaction effect only for **positive attitudes towards AI** among females. Specifically, females with higher positive attitudes towards AI rated AI-generated images as more arousing, relative to when they viewed images labelled as photographs.
+The analysis revealed a significant interaction effect for **positive, and negative, attitudes towards AI** among females and males respectively. Specifically, females with higher positive attitudes towards AI rated AI-generated images as more arousing, relative to when they viewed images labelled as photographs. Additionally, males with higher **negative attitudes towards AI** rated AI-generated labelled images as less arousing.
+
+Females self-report on their expertise on AI was also a moderator of arousal ratings. In particular, females with higher ratings of AI-knowledge rated images labelled as AI-generated as more arousing. 
 
 No other moderators showed statistically significant effects on arousal across the interactions of gender, condition (AI-generated vs Photograph), and the respective moderators.
-
-We also examined whether **feedback** moderates the relationship between gender and condition on arousal. Findings suggest that feedback moderates this relationship only for men. Specifically, males who reported finding AI-generated images as less and more arousing had lower and higher, respectively, arousal ratings for those images.
-
-Lastly, the interaction between sexual activity and condition on Arousal levels. The three-way interaction between gender, condition (AI-Generated), and sexual activity did not reach statistical significance for either males or females, suggesting that the relationship between the AI-Generated condition and arousal ratings does not significantly vary with sexual activity levels for either gender.
-
-<!-- All significant findings for feedback  -->
-
-<!-- 1.For Males, giving feedback indicating that AI-generated images were less attractive, influenced arousal ratings for images labeled as AI-generated. Specifically, males who reported finding AI-generated images as less arousing had lower arousal ratings for those images. 
-
-
-<!-- 2. For Males, giving feedback indicating that AI-generated images were more attractive significantly influenced arousal ratings for images labeled as AI-generated. Specifically, males who reported finding AI-generated images more attractive had higher arousal ratings for these images.  -->
-
-<!-- Note: The feedback that the difference between the conditions was subtle only had one value - i.e., False.  The feedback that some AI images were arousing and that no AI images were arousing also only had one value - i.e., False -->
 
 ```{r Arousal Moderator}
 test_moderator <- function(df, outcome="Arousal", moderator="BAIT_Visual") {
@@ -502,6 +493,12 @@ display(moderator_results)
 
 ```
 
+#### Feedback
+
+We also examined whether **feedback** moderates the relationship between gender and condition on arousal.
+
+Findings suggest that feedback moderates this relationship only for men. Specifically, males who reported finding AI-generated images as less and more arousing had lower and higher, respectively, arousal ratings for those images.
+
 ```{r Arousal Moderator Feedback}
 feedback_results <- data.frame()
 for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive",
@@ -522,6 +519,10 @@ display(feedback_results)
 
 ```
 
+#### Sexual Activity
+
+Lastly, the interaction between sexual activity and condition on Arousal levels. The three-way interaction between gender, condition (AI-Generated), and sexual activity did not reach statistical significance for either males or females, suggesting that the relationship between the AI-Generated condition and arousal ratings does not significantly vary with sexual activity levels for either gender.
+
 ```{r Arousal Sexual Activity}
 
 m <- glmmTMB::glmmTMB(Arousal ~ Gender / (Condition * SexualActivity_num) + (Condition | Participant) + (1|Stimulus),
@@ -541,7 +542,7 @@ sex_act_plot
 ```
 
 ### Believed
-
+#### With Stimuli Type
 ```{r Arousal Believed with stimuli type}
 m <- glmmTMB::glmmTMB(Arousal ~ Gender / StimuliType/Condition + (Condition|Participant) + (Condition|Stimulus),
                         data=filter(df, ConditionBelief == "True"), 
@@ -550,6 +551,10 @@ m <- glmmTMB::glmmTMB(Arousal ~ Gender / StimuliType/Condition + (Condition|Part
   
 results_table(m)
 ```
+
+#### Without Stimuli Type
+
+For trials believed to be true (i.e., labelled in phase 2 matches label presented in phase 1), both males and females rated AI-generated images lower in Arousal then images labelled as real photos.
 
 ```{r Arousal Believed without stimuli type}
 m <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition + (Condition|Participant) + (Condition|Stimulus),
@@ -580,8 +585,6 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 
 ## Enticement
 
-Enticment ratings, for some images, differ by whether the images were preceeded by 'photograph' or by 'AI-generated'.
-
 ```{r Enticement Desc}
 #| fig-height: 12
 #| fig-width: 7
@@ -590,15 +593,10 @@ enticement_desc <- plot_descriptive(df, "Enticing")
 enticement_desc
 ```
 
-### Whole Sample
+### Sample
+This model examines how **Gender and Condition influence enticement** ratings, treating participant and items as random intercepts.
 
-This model examines how **Gender, Stimuli Type and Condition influence enticement** ratings, treating participant and items as random intercepts.
-
-<!-- Key Findings: -->
-
-Women rated images as less enticing than men overall. They rated couple images as more enticing than individual images. Men, on the other hand, rated couple images as less enticing. Men also rated AI-generated images as significantly less enticing than photographs, both for images of individual and couple stimuli. In contrast, women did not significantly differentiate between AI and photographic images in terms of enticement.
-
-Looking at the average slopes, both genders rate Ai-generated conditions lower in enticement, although this effect is only significant for men.
+Men rate images presented as AI-generated significantly lower in enticement than images presented as real photos.
 
 ```{r Enticement Model}
 m_enticement <- glmmTMB::glmmTMB(Enticing ~ Gender / Condition + 
@@ -614,6 +612,14 @@ marginaleffects::avg_slopes(m_enticement, variables="Condition", by="Gender") |>
   results_table()
 
 ```
+
+#### Sample with Stimuli Type
+
+This model examines how **Gender, Stimuli Type and Condition influence enticement** ratings, treating participant and items as random intercepts.
+
+<!-- Key Findings: -->
+
+Women rated images as less enticing than men overall. They rated couple images as more enticing than individual images. Men, on the other hand, rated couple images as less enticing. Men also rated AI-generated images as significantly less enticing than photographs, both for images of individual and couple stimuli. In contrast, women did not significantly differentiate between AI and photographic images in terms of enticement.
 
 ```{r Enticement Model with stimuli type}
 m_enticement_st <- glmmTMB::glmmTMB(Enticing ~ Gender / StimuliType/ Condition + 
@@ -632,11 +638,13 @@ marginaleffects::avg_slopes(m_enticement_st, variables=c("Condition", "StimuliTy
 
 ### Moderators
 
-We examined whether **attitudes towards AI, porn frequency, and sexual activity** moderated the relationship between the predictors (sex, relevance, condition) and enticement ratings. The results showed that enticing ratings for images labeled AI-generated were moderated by the feedback reporting attitudes towards AI, but this was only significant for women. Specifically, women who reported having more positive attitudes towards AI, rated these images higher in arousal compared to images labeled as photographs.
+#### Questionnaires
 
-Looking at **feedback as a moderator**, the results showed that enticement ratings for images labelled as AI-Generated were moderated by the feedback that AI is less attractive for males, and that difference between the AI-Generated images and real photos is obvious for females. Specifically,
+We examined whether **attitudes towards AI, porn frequency, and sexual activity** moderated the relationship between the predictors (sex, relevance, condition) and enticement ratings. 
 
-Lastly, the interaction between sexual activity and condition on enticement, suggests that enticement ratings do not significantly differ with sexual activity levels for either gender.
+The results showed that enticing ratings for images labeled AI-generated were moderated by the feedback reporting attitudes towards AI. Specifically, women who reported having more positive attitudes towards AI, rated these images higher in arousal compared to images labeled as photographs. While, men reporting having more negative attitudes towards AI reported these images as less enticing. 
+
+Sexual activity was a significant moderator for females ratings of enticement, specifically those that reported having has sexual acitvity in the three days prior to the survey rated images as more enticing. 
 
 <!-- Note: Feedback that 'No Images were Arousing' , 'Some Images were Arousing' and the 'difference between real and photos was Subtle' only had 1 level, hence were excluded from the following analysis -->
 
@@ -650,6 +658,10 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 
 display(filter(moderator_results, Outcome == "Enticing"))
 ```
+
+#### Feedback
+
+Looking at **feedback as a moderator**, the results showed that enticement ratings for images labelled as AI-Generated were moderated by the feedback that AI is less attractive for males, where they rated these images as less enticing. Additionally, women who reported believing all labels were incorrect rated AI-generated images as less enticing. 
 
 ```{r Enticement Moderator Feedback}
 for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive",
@@ -670,6 +682,9 @@ for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive",
 display(filter(feedback_results, Outcome == "Enticing"))
 ```
 
+#### Sexual Activity
+Lastly, the interaction between sexual activity and condition on enticement, suggests that enticement ratings do not significantly differ with sexual activity levels for either gender.
+
 ```{r Enticement Sexual Activity}
 m <- glmmTMB::glmmTMB(Enticing ~ Gender / (Condition * SexualActivity_num) + (Condition | Participant) + (1|Stimulus),
                       data=filter(df, ConditionBelief == "True"), 
@@ -689,10 +704,8 @@ sex_act_plot_ent
 
 ### Believed
 
-<!-- Effect becomes larger, more significant and goes in both directions for both genders -->
-
+#### With Stimuli Type
 <!-- Note. Adding condition as random slope for participant did not converge -->
-
 ```{r Enticement Believed1 with stimuli type}
 m <- glmmTMB::glmmTMB(Enticing ~ Gender/ StimuliType/ Condition + (Condition| Participant) + (1|Stimulus),
                       data=filter(df, ConditionBelief == "True"), 
@@ -701,6 +714,10 @@ m <- glmmTMB::glmmTMB(Enticing ~ Gender/ StimuliType/ Condition + (Condition| Pa
 
 results_table(m)
 ```
+
+#### Without Stimuli Type
+
+For trials where the original labels where believed to be true both genders rated AI-generated images as less enticing. 
 
 ```{r Enticement Believed1 wihtout stimuli type}
 m <- glmmTMB::glmmTMB(Enticing ~ Gender / Condition + (Condition| Participant) + (1|Stimulus),
@@ -736,15 +753,10 @@ valence_desc <- plot_descriptive(df, "Valence")
 valence_desc
 ```
 
-### Whole Sample
+### Sample
+This model examines the effect of **Gender, and Condition on Valence** ratings, while accounting for random variability due to participants and items (i.e., random intercepts).
 
-This model examines the effect of **Gender, Stimuli Type and Condition on Valence** ratings, while accounting for random variability due to participants and items (i.e., random intercepts).
-
-<!-- The intercept is Male and photograph.  -->
-
-Women rated images overall as lower in valence than men did. They rated couple images as higher in valence than individual ones. Additionally, women rated AI-generated couple images as significantly lower in valence than photographic couple images. Men rated images of couples lower in valence and AI-images of individuals lower in valence comapred to real photos of individuals.
-
-Looking at avergae slopes, both genders rate AI-generated images lower in valence, but this effect is only significant for males as well.
+Both genders rate AI-generated images as less valent than images labelled as real photos. 
 
 ```{r Valence Model}
 m_valence <- glmmTMB::glmmTMB(Valence ~ Gender/ Condition + 
@@ -758,6 +770,16 @@ marginaleffects::avg_slopes(m_valence, variables="Condition", by="Gender") |>
   results_table()
 
 ```
+
+#### With Stimuli Type
+
+This model examines the effect of **Gender, Stimuli Type and Condition on Valence** ratings, while accounting for random variability due to participants and items (i.e., random intercepts).
+
+<!-- The intercept is Male and photograph.  -->
+
+Women rated images overall as lower in valence than men did. They rated couple images as higher in valence than individual ones. Additionally, women rated AI-generated couple images as significantly lower in valence than photographic couple images. Men rated images of couples lower in valence and AI-images of individuals lower in valence comapred to real photos of individuals.
+
+Looking at avergae slopes, both genders rate AI-generated images lower in valence, but this effect is only significant for males as well.
 
 ```{r Valence Model with stimuli type}
 m_valence_st <- glmmTMB::glmmTMB(Valence ~ Gender / StimuliType/ Condition + 
@@ -775,9 +797,11 @@ marginaleffects::avg_slopes(m_valence_st, variables=c("Condition", "StimuliType"
 
 ### Moderators
 
-Here we look at whether the relationship between gender and condition and valence is moderated by **AI-attitudes, porn frequency, and sexual activity**. The results showed that enticing ratings for images labeled AI-generated were moderated by the feedback reporting attitudes towards AI, but this was only significant for women. More specifically, females who have more positive and negative attitudes towards AI rated images labelled as AI-Generated significantly higher and lower in valence compared to images labelled as photographs.
+#### Questionnaires
 
-Looking at **feedback** as a moderator, the results show that valence ratings for images labelled AI-Generated were moderted by the feedback that the difference between AI and Photos was obvious, but only for females.
+Here we look at whether the relationship between gender and condition and valence is moderated by **AI-attitudes, porn frequency, and sexual activity**. 
+
+The results showed that enticing ratings for images labeled AI-generated were moderated by the feedback reporting attitudes towards AI only for males. More specifically, males reporting more negative attitudes towards AI, rated these images as less valent. Additionally, males reporting higher AI experitise, rated AI images as more valent.
 
 ```{r Valence Moderator}
 for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
@@ -789,6 +813,13 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 display(filter(moderator_results, Outcome == "Valence"))
 ```
 
+#### Feedback
+
+Looking at **feedback** as a moderator, the results show that valence ratings for images labelled AI-Generated were moderated by the feedback that AI images were more attractive for males. 
+
+Additionally, both feedback that there were no difference between AI and real photos and that the difference between AI and photos was obvious where both moderators for females ratings of valence - with females reporting these feedbacks rating AI images as less valent. 
+
+Males feedback that labels were incorrect was also a moderator for valent ratings of AI-generated images, with these images being rated as more valent for those reporting this feedback.
 ```{r Valence Moderator Feedback}
 for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive",
            "Feedback_AIMoreAttractive", "Feedback_AILessAttractive",
@@ -809,6 +840,7 @@ display(filter(feedback_results, Outcome == "Valence"))
 
 ### Believed
 
+#### With Stimuli Type
 ```{r Valence Believed1 with stimuli type}
 m <- glmmTMB::glmmTMB(Valence ~ Gender / StimuliType/ Condition + (Condition| Participant) + (1|Stimulus),
                       data=filter(df, ConditionBelief == "True"), 
@@ -818,6 +850,10 @@ m <- glmmTMB::glmmTMB(Valence ~ Gender / StimuliType/ Condition + (Condition| Pa
 results_table(m)
 
 ```
+
+#### Without Stimuli Type
+
+Both genders rate images labelled as AI-generated as less valent for trials where they believed the original labels to be true.
 
 ```{r Valence Believed1 without stimuli type}
 m <- glmmTMB::glmmTMB(Valence ~ Gender /Condition + (Condition| Participant) + (1|Stimulus),
@@ -879,11 +915,10 @@ emotionality_desc <- plot_descriptive(df, "Emotionality")
 emotionality_desc
 ```
 
-### Whole Sample
+### Sample
+This model looks at the effect of **Gender and Condition on Emotionality**, accounting for random variability due to participants and items (i.e., random intercepts).
 
-This model looks at the effect of **Gender, StimuliType and Condition on Emotionality**, accounting for random variability due to participants and items (i.e., random intercepts).
-
-Females, compared to males, report significantly lower emotionality ratings for fotographs. Among males, couple stimuli are rated lower than individual stimuli.Among females, couple stimuli are rated higher than individual stimuli. For males, AI-generated individual stimuli are rated lower than human-generated ones. Females have lower ratings for AI-generated couple stimuli compared to AI-generated stimuli of individuals.
+Both genders rate AI-generated images as less emotional than images labelled as photographs. 
 
 ```{r Emotionality Model}
 m_emotionality <- glmmTMB::glmmTMB(Emotionality ~ Gender/ Condition + (Condition| Participant) + (1|Stimulus),
@@ -895,6 +930,12 @@ results_table(m_emotionality)
 marginaleffects::avg_slopes(m_emotionality, variables="Condition", by="Gender", re.form=NA) |>
   results_table()
 ```
+
+#### With Stimuli Type
+
+This model looks at the effect of **Gender, StimuliType and Condition on Emotionality**, accounting for random variability due to participants and items (i.e., random intercepts).
+
+Females, compared to males, report significantly lower emotionality ratings for fotographs. Among males, couple stimuli are rated lower than individual stimuli. Among females, couple stimuli are rated higher than individual stimuli. For males, AI-generated individual, and couple, stimuli are rated lower than human-generated ones. 
 
 ```{r Emotionality Model with stimuli type}
 m_emotionality_st <- glmmTMB::glmmTMB(Emotionality ~ Gender /StimuliType/ Condition + (Condition| Participant) + (1|Stimulus),
@@ -909,9 +950,9 @@ marginaleffects::avg_slopes(m_emotionality_st, variables=c("Condition", "Stimuli
 
 ### Moderators
 
-Looking at **AI-attitudes, porn frequency and sexual activity**, and feedback as moderators, we can see that for males reporting higher expertise in AI led to an increase of emotionality ratings for images labelled as AI-Generated. Additionally, males who reported having more negative attitiudes towards AI, rated AI-Generated images lower in emotionality compared to fotographs. While for feamles, those with more positive AI attitudes rate AI-generated images higher in emotionality.
+Looking at **AI-attitudes, porn frequency and sexual activity** as moderators, we can see that for males and females reporting higher expertise in AI led to an increase of emotionality ratings for images labelled as AI-Generated. 
 
-Looking at **feedback** as a moderator, the results show that for males who reported finidng AI-generated images as more attractive rated these images higher in emotionality.Conversely, males who reported finding AI-generated images as less attractive rated these images lower in emotionality.
+Additionally, males and females who reported having more positive attitiudes towards AI, rated AI-Generated images higher in emotionality compared to fotographs. Additionally, for males, those with more negative AI attitudes rate AI-generated images lower in emotionality.
 
 ```{r Emotionality Moderator}
 for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
@@ -922,6 +963,12 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 
 display(filter(moderator_results, Outcome == "Emotionality"))
 ```
+
+#### Feedback
+
+Looking at **feedback** as a moderator, the results show that for males who reported finidng AI-generated images as more attractive rated these images higher in emotionality. Conversely, males who reported finding AI-generated images as less attractive rated these images lower in emotionality.
+
+For females, who reproted believing the difference between AI and photos was none, rated AI images higher in emotionality. 
 
 ```{r Emotionality Moderator Feedback}
 for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive",
@@ -943,6 +990,7 @@ display(filter(feedback_results, Outcome == "Emotionality"))
 
 ### Believed
 
+#### With Stimuli Type
 ```{r EMotionality Believed1 with stimuli type}
 m <- glmmTMB::glmmTMB(Emotionality ~ Gender/StimuliType/ Condition + (Condition| Participant) + (1|Stimulus),
                       data=filter(df, ConditionBelief == "True"), 
@@ -952,6 +1000,10 @@ m <- glmmTMB::glmmTMB(Emotionality ~ Gender/StimuliType/ Condition + (Condition|
 results_table(m)
 
 ```
+
+#### Without Stimuli Type
+
+Both genders rated AI-generated images lower in emotionality than images presented as real photos. 
 
 ```{r EMotionality Believed1 without stimuli type}
 m <- glmmTMB::glmmTMB(Emotionality ~ Gender / Condition + (Condition| Participant) + (1|Stimulus),
@@ -981,20 +1033,22 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 ## Summary
 
 -   Gender is a major predictor of arousal, enticement and valence, with females generally reporting lower ratings than males overall but not significantly.
-- Men significantly rate AI images as less arousing, enticing and valent than images presented as real photos.
-- Women rate images presented as AI-generated lower in valence than images presented as real photos. 
-
--  Women prefer couple images (i.e.,significantly higher arousal, enticement and valence ratings); men prefer individual images (i.e.,significantly lower arousal, enticement and valence ratings).
-- AI-generation reduces arousal for men, especially for individual images. AI-generation has no significant effect on arousal for women, whether images are of individuals or couples.
-
+-   Condition is a major predictor of arousal, enticement and valence for males, with images presented as AI-generated being rated lower than images presented as real photos. For females, condition was only a significant predictor for valence scores. 
+-   However when taking into account only the trials in which the original labels were believed to be true, both genders rated AI-generated images as less arousing, enticing and valent. 
+-  Women prefer couple images while men prefer individual images. 
+  
 **Moderators**
+AI Attitudes:
+  - Females with positive attitudes rated AI images as more arousing and enticing.
+  - Males with negative attitudes rated AI images as less arousing, enticing, and valent.
 
-<!-- -   For women, positive attitudes towards AI moderated arousal and enticement, resulting in more favorable evaluations of AI-generated images. Negative attitudes moderated valence ratings, leading to less favorable evaluations. -->
-<!-- -   Negative attitudes towards AI moderated arousal, valence ratings for both genders -->
-<!-- -   Reporting having higher knowledge about AI moderated arousal, valence ratings for men -->
-<!-- <!-- -   Sexual activity moderated enticement ratings for females. Specifically, females who reported having sexual activity within the 3 previous days tended to rate AI images higher in enticement. --> -->
-<!-- -   Men’s perceptions of the attractiveness of AI-generated images moderated both arousal and valence ratings. More attractive AI images were rated as more arousing and valent, less attractive. -->
-<!-- -   Female's feedback that no images were attractive moderated arousal ratings. -->
+AI Expertise:
+  - Females with higher expertise rated AI images as more arousing.
+  - Males with higher expertise rated AI images as more valent.
+
+Feedback Effects:
+  - Males: Feedback that AI images were more arousing, attractive, or mislabelled increased ratings.
+  - Females: Feedback suggesting no/obvious difference reduced valence ratings.
 
 ## Figures
 
@@ -1018,19 +1072,10 @@ pred1 <- rbind(
   mutate(Outcome="Valence")
 )
 
-# stars1a <- data.frame(label=c("**","***", "**", "***", "***", "***"),
-#                    Gender=fct_relevel(c("Male", "Female", "Male", "Female", "Male", "Female"), "Male"),
-#                     Outcome=c("Arousal","Arousal", "Enticement", "Enticement", "Valence", "Valence"),
-#                     Condition=c("Photograph", "Photograph", "Photograph", "Photograph", "Photograph", "Photograph"),
-#                     x=c(1.5, 1.5, 1.5, 1.5, 1.5, 1.5),
-#                     y = c(0.53, 0.40, 0.6, 0.51, 0.62, 0.58))
-
-# stars1b <- data.frame(label=c("*","**", "*","*"),
-#                     Gender=fct_relevel(c("Male", "Male", "Male","Male"), "Male"),
-#                     Outcome=c("Arousal", "Enticement", "Enticement","Valence"),
-#                     x=c(1, 1, 2, 1),
-#                     y=c(0.60, 0.65, 0.56, 0.68))
-
+stars1a <- data.frame(label=c("**","***", "**", "*"),
+                   Gender=fct_relevel(c("Male", "Male", "Male", "Female"), "Male"),
+                    Outcome=c("Arousal","Enticement","Valence", "Valence"),
+                    y = c(0.5, 0.57, 0.60, 0.60))
 
 p1 <- pred1 |>
   mutate(Gender = fct_relevel(Gender, "Male", "Female")) |> 
@@ -1038,13 +1083,13 @@ p1 <- pred1 |>
   geom_hline(yintercept=0, color="darkgrey") +
   geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.4, key_glyph = "path") +
   geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.3) +
-  # geom_text(data=stars1a, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=6) +
-  # geom_rect(data=data.frame(StimuliType = "Individual", Proportion=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
-  #           aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.7), color="#8BC34A", alpha=0, ) +
-  # geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
-            # aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0) +
+  geom_text(data=stars1a, aes(y=y, label=label), hjust=0.5, color="#424242", size=6) +
+  geom_rect(data=data.frame(Outcome = "Arousal", Proportion=0.1, Gender=as.factor("Male")),
+            aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.53), color="#8BC34A", alpha=0, ) +
+  geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
+            aes(xmin=0.8, xmax=1.2, ymin=0.33, ymax=0.48), color="#8BC34A", alpha=0) +
   facet_grid(~Gender, switch="y", scales ="free") +
-  scale_y_continuous(limits=c(0, 1), labels=scales::percent) +
+  scale_y_continuous(limits=c(0.2, 0.7), labels=scales::percent) +
   scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
   theme_minimal() +
   theme(axis.title.y = element_blank(),
@@ -1058,8 +1103,6 @@ p1 <- pred1 |>
         legend.text = element_text(size = 10),
         legend.position = ) +
   labs(color="Images presented as:")
-
-
 p1
 
 ```
